<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_Fanuc_Prog_In" Id="{d2bf86c4-e249-4734-aff3-ece2f6e65572}">
    <Declaration><![CDATA[TYPE ST_Fanuc_Prog_In :
STRUCT
	(* -----=== Byte 13 ===----- *)
	nActProg					:BYTE;			//	Aktuális program
	(* -----=== Byte 14 ===----- *)
	nActPoint					:BYTE;			//	Aktuális pont
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>