<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="U_Fanuc_Out" Id="{29d70634-92fe-4c86-aa57-93adc0705f55}">
    <Declaration><![CDATA[TYPE U_Fanuc_Out :
UNION
	aFanuc_Out		AT %Q*	:ARRAY [1..16] OF BYTE;
	stFanucOut				:ST_Fanuc_Out;
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>